fix:add flex wrap

--- a/src/Components/Airbnb-components/Airbnb.css
+++ b/src/Components/Airbnb-components/Airbnb.css
@@ -33,6 +33,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
     padding-top: 2rem;
 }
 .MapContainer1 {
